# NyarchScript

./: README.md  install.sh  meson.build  moe.nyarchlinux.scripts.json  nyarchscript.flatpak
data/: meson.build  moe.nyarchlinux.scripts.appdata.xml.in  moe.nyarchlinux.scripts.desktop.in  moe.nyarchlinux.scripts.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  nyarchscript.gresource.xml  nyarchscript.in  scripts.py  window.py  window.ui
